--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Absensi Event Bonataon 2026 - MANIHURUK</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    https://cdn.tailwindcss.com</script>
+    https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap
+    https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap
+    https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css
 
-    <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+    https://unpkg.com/html5-qrcode</script>
 
     <style>
         :root {
@@ -33,6 +34,12 @@
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.2);
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+        }
+
+        .glass-effect-dark {
+            background: rgba(0, 0, 0, 0.8);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .gradient-header {
@@ -163,6 +170,12 @@
             50% { transform: translateY(-15px); }
         }
 
+        .pulse-soft { animation: pulseSoft 2s infinite; }
+        @keyframes pulseSoft {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.7; }
+        }
+
         /* CSS Scanner */
         #reader {
             width: 100%;
@@ -215,23 +228,25 @@
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
-        /* UPDATED LOGO STYLES */
         .logo-container {
+            background: white;
             width: 60px;
             height: 60px;
             border-radius: 16px;
-            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-            background: white;
+            border: 3px solid rgba(255, 255, 255, 0.5);
+            overflow: hidden;
         }
-        .logo-img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+        .logo-img { width: 100%; height: 100%; object-fit: cover; border-radius: 13px; }
+
+        .tugu-logo { width: 100%; height: 100%; object-fit: contain; padding: 5px; border-radius: 13px; }
     </style>
 </head>
 <body class="min-h-screen text-gray-800">
+    <!-- Background Ornaments -->
     <div class="ornament" style="top: 5%; left: 5%; width: 100px; height: 100px;">
         <i class="fas fa-star text-white text-5xl"></i>
     </div>
@@ -249,7 +264,16 @@
 
         <div id="loading" class="absolute inset-0 z-[9999] bg-white flex flex-col justify-center items-center">
             <div class="logo-container mb-6">
-                <img src="image_1.png" alt="Logo Tugu Raja Manihuruk" class="logo-img">
+                <!-- Tugu Raja Manihuruk Logo -->
+                <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, var(--primary), var(--secondary)); border-radius: 13px; padding: 8px;">
+                    <div style="background: white; width: 100%; height: 100%; border-radius: 10px; display: flex; align-items: center; justify-content: center; padding: 5px;">
+                        <div style="font-family: 'Poppins', sans-serif; font-weight: 800; text-align: center; line-height: 1; color: #3a0ca3; font-size: 10px;">
+                            <div>TUGU</div>
+                            <div>RAJA</div>
+                            <div style="color: #4361ee; margin-top: 2px;">MANIHURUK</div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="text-2xl font-bold mb-2" style="background: linear-gradient(135deg, var(--primary), var(--secondary)); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">MANIHURUK</div>
             <div class="text-gray-500 font-medium">Memuat sistem absensi...</div>
@@ -259,13 +283,23 @@
         </div>
 
         <header class="gradient-header text-white p-6 pb-20 shadow-lg relative overflow-hidden">
+            <!-- Animated background elements -->
             <div class="absolute -top-20 -right-20 w-64 h-64 rounded-full bg-white/10 blur-3xl"></div>
             <div class="absolute -bottom-20 -left-20 w-64 h-64 rounded-full bg-purple-500/10 blur-3xl"></div>
 
             <div class="flex justify-between items-start relative z-10">
                 <div class="flex items-center gap-4">
                     <div class="logo-container floating-element">
-                         <img src="image_1.png" alt="Logo Tugu Raja Manihuruk" class="logo-img">
+                        <!-- Tugu Raja Manihuruk Logo -->
+                        <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, var(--primary), var(--secondary)); border-radius: 13px; padding: 8px;">
+                            <div style="background: white; width: 100%; height: 100%; border-radius: 10px; display: flex; align-items: center; justify-content: center; padding: 5px;">
+                                <div style="font-family: 'Poppins', sans-serif; font-weight: 800; text-align: center; line-height: 1; color: #3a0ca3; font-size: 9px;">
+                                    <div>TUGU</div>
+                                    <div>RAJA</div>
+                                    <div style="color: #4361ee; margin-top: 2px; font-size: 8px;">MANIHURUK</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div>
                         <h1 class="text-3xl font-extrabold tracking-tight title-text">BONATAON 2026</h1>
@@ -335,6 +369,7 @@
             <div id="content-area"></div>
         </main>
 
+        <!-- Footer -->
         <footer class="py-4 px-6 border-t border-gray-100 text-center text-gray-500 text-sm bg-white">
             <div class="flex justify-between items-center">
                 <div class="flex items-center gap-2">
@@ -349,6 +384,7 @@
         </footer>
     </div>
 
+    <!-- Admin Modal -->
     <div id="adminModal" class="fixed inset-0 z-[9000] flex items-center justify-center hidden">
         <div class="absolute inset-0 bg-black/80 backdrop-blur-sm" onclick="closeModal('adminModal')"></div>
         <div class="card max-w-sm w-full mx-4 relative z-10 modal p-8">
@@ -358,7 +394,16 @@
 
             <div class="mb-6 text-center">
                 <div class="logo-container mx-auto mb-4">
-                    <img src="image_1.png" alt="Logo Tugu Raja Manihuruk" class="logo-img">
+                    <!-- Tugu Raja Manihuruk Logo -->
+                    <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, var(--primary), var(--secondary)); border-radius: 13px; padding: 8px;">
+                        <div style="background: white; width: 100%; height: 100%; border-radius: 10px; display: flex; align-items: center; justify-content: center; padding: 5px;">
+                            <div style="font-family: 'Poppins', sans-serif; font-weight: 800; text-align: center; line-height: 1; color: #3a0ca3; font-size: 9px;">
+                                <div>TUGU</div>
+                                <div>RAJA</div>
+                                <div style="color: #4361ee; margin-top: 2px; font-size: 8px;">MANIHURUK</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <h3 class="text-xl font-bold text-gray-800 mb-2">Panel Admin</h3>
                 <p class="text-sm text-gray-500">Masukkan password untuk akses fitur admin</p>
@@ -390,6 +435,7 @@
         </div>
     </div>
 
+    <!-- Manual Check-in Modal -->
     <div id="manualCheckinModal" class="fixed inset-0 z-[8000] flex items-center justify-center hidden">
         <div class="absolute inset-0 bg-black/80 backdrop-blur-sm" onclick="closeModal('manualCheckinModal')"></div>
         <div class="card max-w-sm w-full mx-4 relative z-10 modal p-6">
@@ -416,6 +462,7 @@
         </div>
     </div>
 
+    <!-- Manual Gift Claim Modal -->
     <div id="manualGiftModal" class="fixed inset-0 z-[8000] flex items-center justify-center hidden">
         <div class="absolute inset-0 bg-black/80 backdrop-blur-sm" onclick="closeModal('manualGiftModal')"></div>
         <div class="card max-w-sm w-full mx-4 relative z-10 modal p-6">
@@ -442,6 +489,7 @@
         </div>
     </div>
 
+    <!-- Confirm Modal -->
     <div id="confirmModal" class="fixed inset-0 z-[8000] flex items-center justify-center hidden">
         <div class="absolute inset-0 bg-black/80 backdrop-blur-sm" onclick="closeModal('confirmModal')"></div>
         <div class="card max-w-sm w-full mx-4 relative z-10 modal p-6">
@@ -473,6 +521,7 @@
         </div>
     </div>
 
+    <!-- Ticket Modal -->
     <div id="ticketModal" class="fixed inset-0 z-[9999] flex items-center justify-center hidden">
         <div class="absolute inset-0 bg-black/90 backdrop-blur-sm" onclick="closeModal('ticketModal')"></div>
         <div class="card max-w-sm w-full mx-4 relative z-10 modal p-6 text-center border-t-4" style="border-image: linear-gradient(to right, var(--primary), var(--secondary)) 1;">
@@ -502,7 +551,7 @@
             </div>
 
             <div class="space-y-3">
-                <a id="btnDownloadTicket" href="#" download="Tiket_Bonataon.png" class="btn-primary w-full flex items-center justify-center gap-2">
+                #
                     <i class="fas fa-download"></i> Simpan Tiket
                 </a>
 
@@ -588,7 +637,6 @@
             }));
             updateStats();
             if (state.tab === 'register') renderParticipantListOnly();
-            if (state.tab === 'data' && state.participants.length === 0 && state.dataViewMode === 'attendance') render(); // Rerender if data cleared
         });
 
         onValue(ref(db, 'attendance'), s => {
@@ -725,7 +773,6 @@
             document.getElementById('tab-admin').innerHTML = '<i class="fas fa-user-shield text-lg"></i><span class="text-xs">Admin</span>';
             document.getElementById('tab-admin').classList.remove('active');
             showToast('Logout admin berhasil.', 'info');
-            if(state.tab === 'data') render(); // Rerender to hide admin features
         };
 
         window.openManualCheckin = () => {
@@ -852,18 +899,6 @@
             btn.disabled = false;
             btn.innerHTML = `<i class="fas fa-gift mr-2"></i> Ambil Hadiah ${p.name.substring(0, 15)}${p.name.length > 15 ? '...' : ''}`;
             renderManualGiftList();
-        };
-
-        window.processManualCheckin = () => {
-            if(!state.selectedManualCheckin) return;
-            window.doCheckIn(state.selectedManualCheckin);
-            closeModal('manualCheckinModal');
-        };
-
-        window.processManualGift = () => {
-             if(!state.selectedManualGift) return;
-             window.claimGift(state.selectedManualGift);
-             closeModal('manualGiftModal');
         };
 
         // --- FUNGSI CARI TIKET ---
@@ -1353,11 +1388,6 @@
                                     <div class="inline-flex items-center gap-2 bg-gradient-to-r from-purple-100 to-pink-100 text-purple-700 px-4 py-2 rounded-full font-bold mb-4">
                                         <i class="fas fa-crown"></i> Mode Admin Aktif
                                     </div>
-
-                                    <button onclick="confirmResetData()" class="w-full py-3 mb-4 bg-red-100 text-red-700 rounded-xl text-sm font-bold hover:bg-red-200 transition-colors border border-red-200 flex items-center justify-center gap-2">
-                                        <i class="fas fa-trash-alt"></i> RESET SEMUA DATA (BAHAYA)
-                                    </button>
-
                                     <button onclick="adminLogout()" class="w-full py-3 bg-gray-100 text-gray-700 rounded-xl text-sm font-bold hover:bg-gray-200 transition-colors">
                                         <i class="fas fa-sign-out-alt mr-2"></i> Logout Admin
                                     </button>
@@ -1405,6 +1435,14 @@
                             </div>
                         `).join('')}
                     </div>
+
+                    ${state.isAdmin ? `
+                    <div class="text-center pt-8">
+                        <button onclick="resetData()" class="text-sm text-red-400 font-bold border border-red-200 px-5 py-2 rounded-full hover:bg-red-50 transition-colors">
+                            <i class="fas fa-exclamation-triangle mr-2"></i> Admin Reset System
+                        </button>
+                    </div>
+                    ` : ''}
                 `;
             }
         };
@@ -1517,7 +1555,7 @@
                                 <span class="badge badge-success">${document.getElementById('ticGroup').innerText}</span>
                             </div>
                             <div class="qr-code">
-                                <img src="${document.getElementById('ticQR').src}" style="width:100%; height:100%; object-fit:contain;">
+                                ${document.getElementById(
                             </div>
                             <div style="font-family: monospace; margin-top: 10px; font-size: 12px; color: #495057;">
                                 ${document.getElementById('ticCode').innerText}
@@ -1623,39 +1661,14 @@
 
         window.triggerImport = () => document.getElementById('importInput').click();
 
-        // FUNGSI RESET DATA BARU (DENGAN KONFIRMASI GANDA)
-        window.confirmResetData = () => {
-            if (!state.isAdmin) return;
-
-            // Konfirmasi ganda untuk keamanan
-            const confirmationStr = "HAPUS DATA";
-            const userInput = prompt(`PERINGATAN KERAS!\n\nTindakan ini akan MENGHAPUS SEMUA DATA Peserta, Absensi, dan Hadiah secara permanen dari database.\nData yang dihapus TIDAK DAPAT dikembalikan.\n\nUntuk melanjutkan, ketik "${confirmationStr}" di bawah ini:`);
-
-            if (userInput === confirmationStr) {
-                window.processResetData();
-            } else if (userInput !== null) {
-                showToast("Konfirmasi salah. Reset dibatalkan.", 'info');
+        window.resetData = () => {
+            if(prompt("Password Admin:") === ADMIN_PASS && confirm("Hapus SEMUA data? Tindakan ini tidak dapat dibatalkan.")) {
+                set(ref(db, 'participants'), null);
+                set(ref(db, 'attendance'), null);
+                set(ref(db, 'gifts'), null);
+                showToast("Database berhasil direset.", 'success');
             }
         };
-
-        window.processResetData = () => {
-             if (!state.isAdmin) return;
-             showToast("Sedang menghapus data...", 'warning');
-
-             // Menggunakan promise.all untuk memastikan semua node dihapus
-             Promise.all([
-                 set(ref(db, 'participants'), null),
-                 set(ref(db, 'attendance'), null),
-                 set(ref(db, 'gifts'), null)
-             ]).then(() => {
-                 beep('success');
-                 showToast("SEMUA DATA BERHASIL DIRESET KE AWAL.", 'success');
-             }).catch((error) => {
-                 beep('fail');
-                 console.error("Reset failed:", error);
-                 showToast("Gagal mereset data. Cek koneksi internet.", 'error');
-             });
-         };
 
         // Init
         setTimeout(() => {
@@ -1664,4 +1677,3 @@
         }, 1500);
     </script>
 </body>
-</html>
