--- a/index.html
+++ b/index.html
@@ -636,14 +636,15 @@
 
         // --- CONFIG FIREBASE ---
         const firebaseConfig = {
-            apiKey: "AIzaSyBzka8Ps_nf-8zDA2tMDmqEMw6zMoy3aeM",
-            authDomain: "eventnatal2025.firebaseapp.com",
-            databaseURL: "https://eventnatal2025-default-rtdb.asia-southeast1.firebasedatabase.app/", 
-            projectId: "eventnatal2025",
-            storageBucket: "eventnatal2025.firebasestorage.app",
-            messagingSenderId: "961570070334",
-            appId: "1:961570070334:web:888638e9de275e27b2566f",
-            measurementId: "G-QX5GJPEDCF"
+            apiKey: "AIzaSyD1jqsGb3gIGEhg8qo37oMAANNcKDdDuFU",
+            authDomain: "bonataon-2026.firebaseapp.com",
+            databaseURL: "https://bonataon-2026-default-rtdb.asia-southeast1.firebasedatabase.app",
+            projectId: "bonataon-2026",        
+            storageBucket: "bonataon-2026.firebasestorage.app",
+            messagingSenderId: "392578784070",
+            appId: "1:392578784070:web:f85870afad7f202a592347",
+            measurementId: "G-BX7BB696ET"
+
         };
 
         const app = initializeApp(firebaseConfig);
@@ -1776,3 +1777,4 @@
     </script>
 </body>
 </html>
+
