--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           
         <footer class="py-4 px-6 border-t border-slate-200 text-center bg-white/90 backdrop-blur-sm absolute bottom-0 w-full z-20">
             <div class="flex justify-between items-center text-xs">
-                <div class="font-bold text-slate-400">&copy; 2026 Bonataon 2026</div>
+                <div class="font-bold text-slate-400">&copy; 2026 Manihuruk</div>
                 <div class="font-bold text-emerald-700 flex items-center gap-1">
                     Sukacita Bersama <i class="fas fa-heart text-amber-500"></i>
                 </div>
@@ -1352,3 +1352,4 @@
     </script>
 </body>
 </html>
+
